# Ruschip

./: .gitignore  Cargo.toml  README.md
src/: defaults.rs  lib.rs  main.rs
src/backend/: chip8.rs  error.rs  instruction.rs  interfaces.rs  mod.rs  super_chip.rs  superchip.rs
src/frontend/: error.rs  mod.rs  sound.rs
src/ui/: file_picker.rs  mod.rs
